--- a/package.json
+++ b/package.json
@@ -2,19 +2,33 @@
   "name": "fe-workshop",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack",
-    "test": "mocha-webpack --webpack-config webpack.test.js \"src/**/*.spec.js\""
+    "test": "mocha-webpack --webpack-config webpack.test.js src/common/test-setup.ts \"src/**/*.spec.ts*\""
   },
   "author": "mat3e",
   "license": "ISC",
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
+  },
   "devDependencies": {
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
     "mocha-webpack": "^2.0.0-beta.0",
+    "typescript": "^3.2.2",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.1.10",
